plot from different files (unicaja only)

--- a/finde.ipynb
+++ b/finde.ipynb
@@ -137,50 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read XLS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def processXLS(file, bank):   \n",
-    "    balance = []\n",
-    "    date = []\n",
-    "    if bank == 'unicaja':\n",
-    "        book = xlrd.open_workbook(file)\n",
-    "        first_sheet = book.sheet_by_index(0)\n",
-    "        date_int = first_sheet.col_values(0)[5:]\n",
-    "        balance = first_sheet.col_values(5)[5:]\n",
-    "        date = [xlrd.xldate_as_datetime(date_int[i], book.datemode).date().isoformat() for i in  xrange(5, len(date_int))]\n",
-    "        \n",
-    "    return (np.array(balance), np.array(date))     "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Process data files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Unicaja"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = \"accounts/current/unicaja/unicaja.xls\"\n",
-    "(saldosUnicaja, fechasUnicaja) = processXLS(file, 'unicaja')"
    ]
   },
   {
@@ -225,32 +182,6 @@
    },
    "source": [
     "### Traces"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Unicaja"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trace_main_unicaja = go.Scatter(\n",
-    "    x = fechasUnicaja,\n",
-    "    y = saldosUnicaja,\n",
-    "    name = 'Unicaja: Saldo ' + str(format(saldosUnicaja[-1], ',.2f').replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\")) + '€',\n",
-    "    line = dict(\n",
-    "        color = 'green'\n",
-    "    ),\n",
-    "    mode = 'lines'\n",
-    ")\n",
-    "\n",
-    "data = [trace_main_unicaja]"
    ]
   },
   {
@@ -351,29 +282,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Unicaja"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layout = go.Layout(title = 'Saldo ' + str(fechasUnicaja[-1]),\n",
-    "              xaxis = dict(title = 'Fecha'),\n",
-    "              yaxis = dict(title = 'Saldo (€)'),\n",
-    "              showlegend = True\n",
-    ")\n",
-    "\n",
-    "fig = dict(data=data, layout=layout)\n",
-    "py.offline.iplot(fig, filename='styled-line')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Cajamar y Openbank"
    ]
   },
@@ -399,6 +307,70 @@
     "\n",
     "fig = dict(data=data, layout=layout)\n",
     "py.offline.iplot(fig, filename='styled-line')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Full Unicaja Auto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processXLS(file, bank):   \n",
+    "    balance = []\n",
+    "    date = []\n",
+    "    if bank == 'unicaja':\n",
+    "        book = xlrd.open_workbook(file)\n",
+    "        first_sheet = book.sheet_by_index(0)\n",
+    "        date_int = first_sheet.col_values(0)[5:]\n",
+    "        balance = first_sheet.col_values(5)[5:]\n",
+    "        date = [xlrd.xldate_as_datetime(date_int[i], book.datemode).date().isoformat() for i in  xrange(0, len(date_int))]\n",
+    "    return (balance, date)\n",
+    "\n",
+    "print(\"Files found:\")\n",
+    "path = \"accounts/current/\"\n",
+    "directories = [f for f in os.listdir(path) if os.path.isdir(path+f)]\n",
+    "bankdata = {}\n",
+    "for bankname in directories:\n",
+    "    bankdata[bankname] = {\"fechas\":[], \"saldos\":[]}\n",
+    "    files = [os.path.join(path+bankname,f) for f in os.listdir(path+bankname)]\n",
+    "    files.sort(key=lambda x: os.path.getmtime(x))\n",
+    "    for datafile in files:\n",
+    "        extension = os.path.splitext(datafile)[1]\n",
+    "        if extension == \".xls\":\n",
+    "            print(\"> \"+bankname+\"/\"+datafile)\n",
+    "            (balance, date) = processXLS(datafile, bankname)\n",
+    "            bankdata[bankname][\"saldos\"].extend(balance)\n",
+    "            bankdata[bankname][\"fechas\"].extend(date)\n",
+    "\n",
+    "saldos = bankdata[\"unicaja\"][\"saldos\"]\n",
+    "fechas = bankdata[\"unicaja\"][\"fechas\"]\n",
+    "\n",
+    "trace_main_unicaja = go.Scatter(\n",
+    "    x = fechas,\n",
+    "    y = saldos,\n",
+    "    name = 'Unicaja: Saldo ' + str(format(saldos[-1], ',.2f').replace(\",\", \"X\").replace(\".\", \",\").replace(\"X\", \".\")) + '€',\n",
+    "    line = dict(\n",
+    "        color = 'green'\n",
+    "    ),\n",
+    "    mode = 'lines'\n",
+    ")\n",
+    "\n",
+    "data = [trace_main_unicaja]\n",
+    "\n",
+    "layout = go.Layout(title = 'Saldo ' + str(fechas[-1]),\n",
+    "              xaxis = dict(title = 'Fecha'),\n",
+    "              yaxis = dict(title = 'Saldo (€)'),\n",
+    "              showlegend = True\n",
+    ")\n",
+    "fig = dict(data=data, layout=layout)\n",
+    "py.offline.iplot(fig)\n"
    ]
   }
  ],
