--- a/finde.ipynb
+++ b/finde.ipynb
@@ -40,38 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
     "id": "oYUEQw_9tt5v",
     "outputId": "bad06c29-45c6-4f11-b566-aa3d1d75bc42"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: plotly in /home/josman/anaconda3/lib/python3.7/site-packages (3.6.1)\n",
-      "Requirement already satisfied: decorator>=4.0.6 in /home/josman/anaconda3/lib/python3.7/site-packages (from plotly) (4.3.0)\n",
-      "Requirement already satisfied: nbformat>=4.2 in /home/josman/anaconda3/lib/python3.7/site-packages (from plotly) (4.4.0)\n",
-      "Requirement already satisfied: requests in /home/josman/anaconda3/lib/python3.7/site-packages (from plotly) (2.21.0)\n",
-      "Requirement already satisfied: retrying>=1.3.3 in /home/josman/anaconda3/lib/python3.7/site-packages (from plotly) (1.3.3)\n",
-      "Requirement already satisfied: six in /home/josman/anaconda3/lib/python3.7/site-packages (from plotly) (1.12.0)\n",
-      "Requirement already satisfied: pytz in /home/josman/anaconda3/lib/python3.7/site-packages (from plotly) (2018.7)\n",
-      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /home/josman/anaconda3/lib/python3.7/site-packages (from nbformat>=4.2->plotly) (2.6.0)\n",
-      "Requirement already satisfied: ipython-genutils in /home/josman/anaconda3/lib/python3.7/site-packages (from nbformat>=4.2->plotly) (0.2.0)\n",
-      "Requirement already satisfied: jupyter-core in /home/josman/anaconda3/lib/python3.7/site-packages (from nbformat>=4.2->plotly) (4.4.0)\n",
-      "Requirement already satisfied: traitlets>=4.1 in /home/josman/anaconda3/lib/python3.7/site-packages (from nbformat>=4.2->plotly) (4.3.2)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /home/josman/anaconda3/lib/python3.7/site-packages (from requests->plotly) (2.8)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/josman/anaconda3/lib/python3.7/site-packages (from requests->plotly) (3.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/josman/anaconda3/lib/python3.7/site-packages (from requests->plotly) (2018.11.29)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /home/josman/anaconda3/lib/python3.7/site-packages (from requests->plotly) (1.24.1)\n",
-      "Requirement already satisfied: xlrd in /home/josman/anaconda3/lib/python3.7/site-packages (1.2.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install plotly"
    ]
@@ -98,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -108,20 +84,7 @@
     "id": "iDUY_DZutt5-",
     "outputId": "124aafe4-ef09-46f3-ef3e-120fdc2541cb"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script><script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window._Plotly) {require(['plotly'],function(plotly) {window._Plotly=plotly;});}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import plotly as py\n",
     "import plotly.graph_objs as go\n",
@@ -147,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -174,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,38 +231,15 @@
     "                dash = 'dot'\n",
     "            )\n",
     "        )\n",
-    "        data.push(trace_min)\n",
-    "        \n",
-    "return data"
+    "        data.push(trace_min)  \n",
+    "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files found:\n",
-      "> openbank/accounts/current/openbank/nomina.xls\n",
-      "> cajamar/accounts/current/cajamar/saldo.csv\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown format code 'f' for object of type 'numpy.str_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-97-dad5138cc100>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m             \u001b[0mbankdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbankname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"date\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltTraces\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbankdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32mcell_name\u001b[0m in \u001b[0;36mbuiltTraces\u001b[0;34m(bankdata)\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Unknown format code 'f' for object of type 'numpy.str_'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Files found:\")\n",
     "path = \"accounts/current/\"\n",
@@ -463,35 +403,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def processXLS(file, bank):   \n",
-    "    balance = []\n",
-    "    date = []\n",
-    "    if bank == 'unicaja':\n",
-    "        book = xlrd.open_workbook(file)\n",
-    "        first_sheet = book.sheet_by_index(0)\n",
-    "        date_int = first_sheet.col_values(0)[5:]\n",
-    "        balance = first_sheet.col_values(5)[5:]\n",
-    "        date = [xlrd.xldate_as_datetime(date_int[i], book.datemode).date().isoformat() for i in  xrange(0, len(date_int))]\n",
-    "    return (balance, date)\n",
+    "def loadDataFiles():    \n",
+    "    print(\"Data files found:\")\n",
+    "    bankdata = {}\n",
+    "    for accountType in ACCOUNTTYPES:\n",
+    "        path = \"../accounts/{}/\".format(accountType)\n",
+    "        directories = [f for f in os.listdir(path) if os.path.isdir(path+f)]\n",
+    "        bankdata[accountType] = {}\n",
+    "        for bankname in directories:\n",
+    "            bankdata[accountType][bankname] = {\"date\":[], \"balance\":[]}\n",
+    "            files = [os.path.join(path+bankname,f) for f in os.listdir(path+bankname)]\n",
+    "            files.sort(key=lambda x: os.path.getmtime(x))\n",
+    "            for datafile in files:\n",
+    "                extension = os.path.splitext(datafile)[1]\n",
+    "                if extension == \".xls\":\n",
+    "                    print(\"/t{}/{}\".format(bankname, datafile))\n",
+    "                    (balance, date) = processXLS(datafile, bankname)\n",
+    "                    bankdata[accountType][bankname][\"balance\"].extend(balance)\n",
+    "                    bankdata[accountType][bankname][\"date\"].extend(date)\n",
+    "    return bankdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CONSTANTS\n",
+    "CURRENT = \"current\"\n",
+    "SAVING = \"saving\"\n",
+    "ACCOUNTTYPES  = [CURRENT, SAVING]\n",
+    "UNICAJA = \"unicaja\"\n",
     "\n",
-    "print(\"Files found:\")\n",
-    "path = \"accounts/current/\"\n",
-    "directories = [f for f in os.listdir(path) if os.path.isdir(path+f)]\n",
-    "bankdata = {}\n",
-    "for bankname in directories:\n",
-    "    bankdata[bankname] = {\"fechas\":[], \"saldos\":[]}\n",
-    "    files = [os.path.join(path+bankname,f) for f in os.listdir(path+bankname)]\n",
-    "    files.sort(key=lambda x: os.path.getmtime(x))\n",
-    "    for datafile in files:\n",
-    "        extension = os.path.splitext(datafile)[1]\n",
-    "        if extension == \".xls\":\n",
-    "            print(\"> \"+bankname+\"/\"+datafile)\n",
-    "            (balance, date) = processXLS(datafile, bankname)\n",
-    "            bankdata[bankname][\"saldos\"].extend(balance)\n",
-    "            bankdata[bankname][\"fechas\"].extend(date)\n",
-    "\n",
-    "saldos = bankdata[\"unicaja\"][\"saldos\"]\n",
-    "fechas = bankdata[\"unicaja\"][\"fechas\"]\n",
+    "bankdata = loadDataFiles()\n",
+    "'''\n",
+    "fechas = bankdata[ACCOUNTTYPES[0]][UNICAJA][\"date\"]\n",
+    "saldos = bankdata[ACCOUNTTYPES[0]][UNICAJA][\"balance\"]\n",
     "\n",
     "trace_main_unicaja = go.Scatter(\n",
     "    x = fechas,\n",
@@ -502,8 +450,8 @@
     "    ),\n",
     "    mode = 'lines'\n",
     ")\n",
-    "\n",
-    "data = [trace_main_unicaja]\n",
+    "'''\n",
+    "data = builtTraces(bankdata)\n",
     "\n",
     "layout = go.Layout(title = 'Saldo ' + str(fechas[-1]),\n",
     "              xaxis = dict(title = 'Fecha'),\n",
@@ -511,7 +459,7 @@
     "              showlegend = True\n",
     ")\n",
     "fig = dict(data=data, layout=layout)\n",
-    "py.offline.iplot(fig)\n"
+    "py.offline.iplot(fig)"
    ]
   }
  ],
@@ -530,14 +478,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
