--- a/finde.ipynb
+++ b/finde.ipynb
@@ -403,25 +403,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loadDataFiles():    \n",
-    "    print(\"Data files found:\")\n",
-    "    bankdata = {}\n",
-    "    for accountType in ACCOUNTTYPES:\n",
-    "        path = \"../accounts/{}/\".format(accountType)\n",
-    "        directories = [f for f in os.listdir(path) if os.path.isdir(path+f)]\n",
-    "        bankdata[accountType] = {}\n",
-    "        for bankname in directories:\n",
-    "            bankdata[accountType][bankname] = {\"date\":[], \"balance\":[]}\n",
-    "            files = [os.path.join(path+bankname,f) for f in os.listdir(path+bankname)]\n",
-    "            files.sort(key=lambda x: os.path.getmtime(x))\n",
-    "            for datafile in files:\n",
-    "                extension = os.path.splitext(datafile)[1]\n",
-    "                if extension == \".xls\":\n",
-    "                    print(\"/t{}/{}\".format(bankname, datafile))\n",
-    "                    (balance, date) = processXLS(datafile, bankname)\n",
-    "                    bankdata[accountType][bankname][\"balance\"].extend(balance)\n",
-    "                    bankdata[accountType][bankname][\"date\"].extend(date)\n",
-    "    return bankdata"
+    "# CONSTANTS\n",
+    "CURRENT = \"current\"\n",
+    "SAVING = \"saving\"\n",
+    "ACCOUNTTYPES  = [CURRENT, SAVING]\n",
+    "UNICAJA = \"unicaja\""
    ]
   },
   {
@@ -430,14 +416,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CONSTANTS\n",
-    "CURRENT = \"current\"\n",
-    "SAVING = \"saving\"\n",
-    "ACCOUNTTYPES  = [CURRENT, SAVING]\n",
-    "UNICAJA = \"unicaja\"\n",
-    "\n",
+    "def sortDataFiles(bankdata):\n",
+    "    for accountType in ACCOUNTTYPES:\n",
+    "        for bankname in bankdata[accountType]:\n",
+    "            (bankdata[accountType][bankname][\"date\"],bankdata[accountType][bankname][\"balance\"]) =zip(*sorted(zip(bankdata[accountType][bankname][\"date\"], bankdata[accountType][bankname][\"balance\"])))\n",
+    "            \n",
+    "    return bankdata\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loadDataFiles():    \n",
+    "    print(\"Data files found:\")\n",
+    "    bankdata = {}\n",
+    "    for accountType in ACCOUNTTYPES:\n",
+    "        path = \"accounts/{}/\".format(accountType)\n",
+    "        directories = [f for f in os.listdir(path) if os.path.isdir(path+f)]\n",
+    "        bankdata[accountType] = {}\n",
+    "        for bankname in directories:\n",
+    "            bankdata[accountType][bankname] = {\"date\":[], \"balance\":[]}\n",
+    "            files = [os.path.join(path+bankname,f) for f in os.listdir(path+bankname)]\n",
+    "            #files.sort(key=lambda x: os.path.getmtime(x))\n",
+    "            for datafile in files:\n",
+    "                extension = os.path.splitext(datafile)[1]\n",
+    "                if extension == \".xls\":\n",
+    "                    print(\"/t{}/{}\".format(bankname, datafile))\n",
+    "                    (balance, date) = processXLS(datafile, bankname)\n",
+    "                    bankdata[accountType][bankname][\"balance\"].extend(balance)\n",
+    "                    bankdata[accountType][bankname][\"date\"].extend(date)\n",
+    "    return sortDataFiles(bankdata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bankdata = loadDataFiles()\n",
-    "'''\n",
+    "\n",
     "fechas = bankdata[ACCOUNTTYPES[0]][UNICAJA][\"date\"]\n",
     "saldos = bankdata[ACCOUNTTYPES[0]][UNICAJA][\"balance\"]\n",
     "\n",
@@ -450,8 +472,8 @@
     "    ),\n",
     "    mode = 'lines'\n",
     ")\n",
-    "'''\n",
-    "data = builtTraces(bankdata)\n",
+    "\n",
+    "data = [trace_main_unicaja]\n",
     "\n",
     "layout = go.Layout(title = 'Saldo ' + str(fechas[-1]),\n",
     "              xaxis = dict(title = 'Fecha'),\n",
@@ -461,6 +483,13 @@
     "fig = dict(data=data, layout=layout)\n",
     "py.offline.iplot(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
