some minor changes

--- a/finde.ipynb
+++ b/finde.ipynb
@@ -417,7 +417,7 @@
    "outputs": [],
    "source": [
     "def sortDataFiles(bankdata):\n",
-    "    for accountType in ACCOUNTTYPES:\n",
+    "    for accountType in bankdata:\n",
     "        for bankname in bankdata[accountType]:\n",
     "            (bankdata[accountType][bankname][\"date\"],bankdata[accountType][bankname][\"balance\"]) =zip(*sorted(zip(bankdata[accountType][bankname][\"date\"], bankdata[accountType][bankname][\"balance\"])))\n",
     "            \n",
@@ -435,7 +435,7 @@
     "    print(\"Data files found:\")\n",
     "    bankdata = {}\n",
     "    for accountType in ACCOUNTTYPES:\n",
-    "        path = \"accounts/{}/\".format(accountType)\n",
+    "        path = \"../accounts/{}/\".format(accountType)\n",
     "        directories = [f for f in os.listdir(path) if os.path.isdir(path+f)]\n",
     "        bankdata[accountType] = {}\n",
     "        for bankname in directories:\n",
@@ -445,7 +445,7 @@
     "            for datafile in files:\n",
     "                extension = os.path.splitext(datafile)[1]\n",
     "                if extension == \".xls\":\n",
-    "                    print(\"/t{}/{}\".format(bankname, datafile))\n",
+    "                    print(\"{}: {}\".format(bankname, datafile))\n",
     "                    (balance, date) = processXLS(datafile, bankname)\n",
     "                    bankdata[accountType][bankname][\"balance\"].extend(balance)\n",
     "                    bankdata[accountType][bankname][\"date\"].extend(date)\n",
@@ -459,7 +459,7 @@
    "outputs": [],
    "source": [
     "bankdata = loadDataFiles()\n",
-    "\n",
+    "'''\n",
     "fechas = bankdata[ACCOUNTTYPES[0]][UNICAJA][\"date\"]\n",
     "saldos = bankdata[ACCOUNTTYPES[0]][UNICAJA][\"balance\"]\n",
     "\n",
@@ -474,8 +474,9 @@
     ")\n",
     "\n",
     "data = [trace_main_unicaja]\n",
-    "\n",
-    "layout = go.Layout(title = 'Saldo ' + str(fechas[-1]),\n",
+    "'''\n",
+    "data = builtTraces(bankdata)\n",
+    "layout = go.Layout(title = 'Saldo ',\n",
     "              xaxis = dict(title = 'Fecha'),\n",
     "              yaxis = dict(title = 'Saldo (€)'),\n",
     "              showlegend = True\n",
@@ -483,13 +484,6 @@
     "fig = dict(data=data, layout=layout)\n",
     "py.offline.iplot(fig)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
