--- a/finde.ipynb
+++ b/finde.ipynb
@@ -262,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def builtTraces(bankdata):\n",
+    "def buildTraces(bankdata):\n",
     "    data = []\n",
     "    \n",
     "    for accountType in ACCOUNTTYPES: # Account type\n",
@@ -331,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def builtPig(bankdata):\n",
+    "def buildPig(bankdata):\n",
     "    banks = []\n",
     "    amount = []\n",
     "    \n",
@@ -428,7 +428,7 @@
    "outputs": [],
    "source": [
     "bankdata = loadDataFiles() # Load files\n",
-    "data = builtTraces(bankdata) # Built traces from data\n",
+    "data = buildTraces(bankdata) # Build traces from data\n",
     "(minDate, maxDate) = getIntervalDates(bankdata)\n",
     "\n",
     "# Plot charts\n",
@@ -442,7 +442,7 @@
     "py.offline.iplot(fig, filename='styled-line')\n",
     "\n",
     "# Hucha\n",
-    "data = builtPig(bankdata)\n",
+    "data = buildPig(bankdata)\n",
     "layout = go.Layout(\n",
     "    title = 'Hucha',\n",
     "    barmode='stack'\n",
