buildProfit fixed. Movements added for openbank.

--- a/finde.ipynb
+++ b/finde.ipynb
@@ -181,9 +181,11 @@
     "        df = pd.read_html(file)\n",
     "        df = df[0].dropna(axis=0, thresh=4)\n",
     "        date_str = df.iloc[1:,1]\n",
-    "        date = [dt.datetime.strptime(x, '%d/%m/%Y').date() for x in date_str]\n",
+    "        date = [dt.datetime.strptime(x, '%d/%m/%Y').date().isoformat() for x in date_str]\n",
     "        balance_str = df.iloc[1:,9]\n",
     "        balance = [float((x[:-2] + ',' + x[-2:]).replace('.','').replace(',','.')) for x in balance_str]\n",
+    "        movements_str = df.iloc[1:,7]\n",
+    "        movements = [float((x[:-2] + ',' + x[-2:]).replace('.','').replace(',','.')) for x in movements_str]\n",
     "\n",
     "    return (balance, date, movements)"
    ]
@@ -357,16 +359,17 @@
    "outputs": [],
    "source": [
     "def buildProfit(bankdata):\n",
-    "    months = []\n",
-    "    profit = []\n",
+    "    data = []\n",
     "    \n",
     "    for bank in bankdata[CURRENT]:\n",
     "        date = bankdata[CURRENT][bank]['date']\n",
     "        movements = bankdata[CURRENT][bank]['movements']\n",
     "        pDay = date[0][:7]\n",
     "        pValue = 0\n",
+    "        months = []\n",
+    "        profit = []\n",
     "        for cDay, cValue in zip(date, movements):\n",
-    "            pValue += cValue\n",
+    "            pValue += float(cValue)\n",
     "            if cDay[:7] != pDay:\n",
     "                months.append(pDay)\n",
     "                profit.append(pValue)\n",
@@ -376,13 +379,14 @@
     "        profit.append(pValue)\n",
     "        \n",
     "    \n",
-    "    trace = go.Bar(\n",
-    "        x = months,\n",
-    "        y = profit,\n",
-    "        name = 'Profit'\n",
-    "    )\n",
+    "        trace = go.Bar(\n",
+    "            x = months,\n",
+    "            y = profit,\n",
+    "            name = \"Profit for {}\".format(bank)\n",
+    "        )\n",
+    "        data.append(trace)\n",
     "        \n",
-    "    return [trace]"
+    "    return data"
    ]
   },
   {
@@ -453,42 +457,23 @@
     "\n",
     "data = buildProfit(bankdata)\n",
     "layout = go.Layout(\n",
-    "    title = 'Profit',\n",
-    "    barmode='stack'\n",
+    "    title = 'Monthly Profit',\n",
+    "    barmode='group'\n",
     ")\n",
     "\n",
     "fig = go.Figure(data=data, layout=layout)\n",
-    "py.offline.iplot(fig, filename='stacked-bar')\n",
+    "py.offline.iplot(fig, filename='grouped-bar')\n",
     "\n",
+    "'''\n",
     "fig = tools.make_subplots(rows=1, cols=2)\n",
     "\n",
     "fig.append_trace(trace1, 1, 1)\n",
     "fig.append_trace(trace2, 1, 2)\n",
     "\n",
     "fig['layout'].update(height=600, width=800, title='i <3 annotations and subplots')\n",
-    "py.offline.iplot(fig, filename='simple-subplot-with-annotations')"
+    "py.offline.iplot(fig, filename='simple-subplot-with-annotations')\n",
+    "'''\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
